--- a/MaterialDesignTest/DmxController.csproj
+++ b/MaterialDesignTest/DmxController.csproj
@@ -103,6 +103,9 @@
     <Compile Include="ViewModels\IPageViewModel.cs" />
     <Compile Include="ViewModels\Modules\ActionColorModuleViewModel.cs" />
     <Compile Include="ViewModels\Modules\ColorBalanceModuleViewModel.cs" />
+    <Compile Include="ViewModels\NetworkFormViewModel.cs" />
+    <Compile Include="ViewModels\SettingsViewModel.cs" />
+    <Compile Include="ViewModels\TargetFormViewModel.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="ViewModels\ColorViewModel.cs" />
     <Compile Include="Converters\ByteToDoubleConverter.cs" />
@@ -121,6 +124,15 @@
     </Compile>
     <Compile Include="Views\Modules\ColorBalanceModuleView.xaml.cs">
       <DependentUpon>ColorBalanceModuleView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NetworkFormView.xaml.cs">
+      <DependentUpon>NetworkFormView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SettingsView.xaml.cs">
+      <DependentUpon>SettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\TargetFormView.xaml.cs">
+      <DependentUpon>TargetFormView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ViewState.cs" />
     <Page Include="MainWindow.xaml">
@@ -148,6 +160,18 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Modules\ColorBalanceModuleView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\NetworkFormView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\TargetFormView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
