--- a/MaterialDesignTest/packages.config
+++ b/MaterialDesignTest/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net452" />
   <package id="MaterialDesignThemes" version="2.4.0.1044" targetFramework="net452" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net452" />
 </packages>
