--- a/MaterialDesignTest/DmxController.csproj
+++ b/MaterialDesignTest/DmxController.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Common\Configuration\IConfigurable.cs" />
     <Compile Include="Common\Configuration\NetworkConfiguration.cs" />
     <Compile Include="Common\Configuration\TargetConfiguration.cs" />
+    <Compile Include="Common\Packet\PacketHandler.cs" />
     <Compile Include="StoryBoards\StoryBoardElement.cs" />
     <Compile Include="ViewModels\ApplicationViewModel.cs" />
     <Compile Include="Converters\ColorBrushToColorConverter.cs" />
@@ -128,7 +129,6 @@
     <Compile Include="ViewModels\ColorViewModel.cs" />
     <Compile Include="Converters\ByteToDoubleConverter.cs" />
     <Compile Include="Animations\GridLengthAnimation.cs" />
-    <Compile Include="Packet.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="UtilityProvider.cs" />
     <Compile Include="Views\ColorView.xaml.cs">
