--- a/MaterialDesignTest/DmxController.csproj
+++ b/MaterialDesignTest/DmxController.csproj
@@ -110,6 +110,7 @@
     <Compile Include="StoryBoards\StoryBoardElement.cs" />
     <Compile Include="ViewModels\ApplicationViewModel.cs" />
     <Compile Include="Converters\ColorBrushToColorConverter.cs" />
+    <Compile Include="ViewModels\DialogCloser.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\IModuleViewModel.cs" />
     <Compile Include="ViewModels\IPageViewModel.cs" />
@@ -117,6 +118,7 @@
     <Compile Include="ViewModels\Modules\ColorBalanceModuleViewModel.cs" />
     <Compile Include="ViewModels\Modules\StoryBoardElementActionModuleViewModel.cs" />
     <Compile Include="ViewModels\Modules\StoryBoardElementModuleViewModel.cs" />
+    <Compile Include="ViewModels\NewStoryBoardViewModel.cs" />
     <Compile Include="ViewModels\StoryBoardViewModel.cs" />
     <Compile Include="ViewModels\TargetTypeEnum.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
@@ -141,6 +143,9 @@
     </Compile>
     <Compile Include="Views\Modules\StoryBoardElementModuleView.xaml.cs">
       <DependentUpon>StoryBoardElementModuleView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NewStoryBoardView.xaml.cs">
+      <DependentUpon>NewStoryBoardView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\StoryBoardView.xaml.cs">
       <DependentUpon>StoryBoardView.xaml</DependentUpon>
@@ -182,6 +187,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\NewStoryBoardView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\StoryBoardView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -205,8 +214,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="ClassDiagram1.cd" />
-    <None Include="ClassDiagram2.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
